Cambios de nombre, registro
